# smart-contract-database-builder

./: .gitignore  Cargo.toml  README.md
contracts/: demo-flatten.sol
contracts/demo/: AdvancedCounter.sol  Counter.sol  ICounter.sol  Math.sol  metadata.json
src/: db.rs  functions.rs  main.rs  plain_contract.rs  utils.rs
