[package]
name = "smart-contract-database-builder"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
duckdb = "0.10.2"
eyre = "0.6.12"
itertools = "0.13.0"
md5 = "0.7.0"
regex = "1.10.5"
serde = { version = "1.0.203", features = ["serde_derive", "derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
walkdir = "2.5.0"
env_logger = "0.11.3"
log = "0.4.21"
tokio-stream = { version = "0.1.15", features = ["full"] }
tempfile = "3.10.1"
rand = "0.8.5"
foundry-compilers = { version = "0.8.0", features = ["full", "svm-solc"] }
semver = "1.0.23"
alloy-json-abi = { version = "*", features = ["serde_json"] }
foundry-compilers-artifacts = { version = "*", features = ["async"] }


# ethers = { version = "2.0.14", features = ["ws"] }
# foundry-compilers-artifacts-solc = { version = "*", features = ["async"] }
# foundry-compilers-artifacts-vyper = "*"
